--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                     <div class="row">
                         <div class="col-xl-9 col-md-12">
                             <div class="slider-content slider-content-2">
-                                <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admition Going On</span><br>Himalayiya University</h1>
+                                <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admission Going On</span><br>Himalayiya University</h1>
                                 <p data-animation="fadeInUp" data-delay=".4s">The best University in Dehradun to find,  make learning easy and fun apply today <br> in Himalayiya University.</p>
-                                <button class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></button>
+                                <a href="admit.php" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
                             </div>
                         </div>
                     </div>
@@ -174,9 +174,9 @@
                     <div class="row">
                         <div class="col-xl-8 col-md-12 offset-xl-2">
                             <div class="slider-content slider-content-2 text-center">
-                                <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admition Going On</span><br>Himalayiya University</h1>
+                                <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admission Going On</span><br>Himalayiya University</h1>
                                 <p data-animation="fadeInUp" data-delay=".4s">Sorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua enim ad minime.</p>
-                                <button class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></button>
+                                <a href="admit.php" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
                             </div>
                         </div>
                     </div>
@@ -187,9 +187,9 @@
                     <div class="row">
                         <div class="col-xl-9 col-md-12">
                             <div class="slider-content slider-content-2">
-                                <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admition Going On</span><br>Himalayiya University</h1>
+                                <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admission Going On</span><br>Himalayiya University</h1>
                                 <p data-animation="fadeInUp" data-delay=".4s">Sorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua enim ad minime.</p>
-                                <button class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></button>
+                                <a href="admit.php" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
                             </div>
                         </div>
                     </div>
