--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <div class="slider-content slider-content-2">
                                 <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admission Going On</span><br>Himalayiya University</h1>
                                 <p data-animation="fadeInUp" data-delay=".4s">The best University in Dehradun to find,  make learning easy and fun apply today <br> in Himalayiya University.</p>
-                                <a href="admit.php" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
+                                <a href="admit.html" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
                             </div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                             <div class="slider-content slider-content-2 text-center">
                                 <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admission Going On</span><br>Himalayiya University</h1>
                                 <p data-animation="fadeInUp" data-delay=".4s">Sorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua enim ad minime.</p>
-                                <a href="admit.php" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
+                                <a href="admit.html" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
                             </div>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                             <div class="slider-content slider-content-2">
                                 <h1 class="white-color f-700" data-animation="fadeInUp" data-delay=".2s"><span>Admission Going On</span><br>Himalayiya University</h1>
                                 <p data-animation="fadeInUp" data-delay=".4s">Sorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua enim ad minime.</p>
-                                <a href="admit.php" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
+                                <a href="admit.html" class="theme-btn" data-animation="fadeInUp" data-delay=".6s"><span class="btn-text">admit now</span></a>
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                         <h1>Welcome To Himalayiya University</h1>
                         <p>Himalayiya University with its high-class infrastructure and high principles of learning, well-built commercial & industry interface is a right platform for aspiring students.
                             Himalayiya University is established in pursuance of the provisions of Clause (3) of Article 348 of the Constitution of India through Himalayiya University Act, 2019 (Act No. 08 of 2019) by the Government of Uttarakhand in the year June 2019. A society of leading Educationist and Professionals proposed the establishment of this university with a single and dedicated aim of transforming a generous culture, which could develop an educational method to set up future professionals who are devoted, faithful, truthful, regimented and technically sound with massive strength of moral fiber.</p>
-                        <button class="theme-btn blue-bg-border mt-20"><span class="btn-text">admit now</span></button>
+                        <a href="admit.html" class="theme-btn blue-bg-border mt-20"><span class="btn-text">admit now</span></a>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-5">
