--- a/admin/index.html
+++ b/admin/index.html
@@ -126,7 +126,7 @@
 
                   <!-- Submit button -->
                   <!-- <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button> -->
-                  <a href="forms/d-form1.php" class="btn btn-primary btn-lg btn-block">Sign in</a>
+                  <a href="home.html" class="btn btn-primary btn-lg btn-block">Sign in</a>
                 </form>
               </div>
             </div>
